--- a/reports/20230228_report.md
+++ b/reports/20230228_report.md
@@ -7,8 +7,8 @@ categories: [report]
 
 In January, `#include ＜C++＞` received a report of multiple allegations against an Organiser.
 
-None of the allegations were related to behaviour on this server, at #include events, or while
-representing `#include ＜C++＞`. `#include ＜C++＞` is committed to encouraging historically
+None of the allegations were related to behaviour on this server, at `#include ＜C++＞` events, or
+while representing `#include ＜C++＞`. `#include ＜C++＞` is committed to encouraging historically
 disadvantaged people in C++, and takes reports of this kind very seriously. Our Code of Conduct is
 on our [website][1].
 
